Sutvarkytas darbas, pakeistas BEM, sutvarkyti nestai.

--- a/atsiskaitimas/index.html
+++ b/atsiskaitimas/index.html
@@ -53,14 +53,17 @@
       </div>
       <div class="container__images">
         <div class="container__images">
+            <div class="container__images__card">
           <img src="css/img/design.png" alt="" />
           <h4>Web design</h4>
           <p>
             Here you can find all web design and all of yours designing
             meterials
           </p>
+          </div>
         </div>
         <div class="container__images">
+            <div class="container__images__card">
           <img src="css/img/doctor.png" alt="" />
           <h4>Web design</h4>
           <p>
@@ -68,21 +71,26 @@
             meterials
           </p>
         </div>
+        </div>
         <div class="container__images">
+            <div class="container__images__card">
           <img src="css/img/box.png" alt="" />
           <h4>Packaging</h4>
           <p>
             Consistency in packaging matter a lot. Give your attention match
             design elements
           </p>
+            </div>
         </div>
         <div class="container__images">
+            <div class="container__images__card">
           <img src="css/img/blog.png" alt="" />
           <h4>Content writing</h4>
           <p>
             It can be understood that your fonts, sizes, headings, sub-headings,
             and button
           </p>
+        </div>
         </div>
       </div>
     </section>
